--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 before_script:
-  - "sudo apt-get install avra"
+  - "sudo apt-get install avra=1.3.0"
 script:
   - "    make all \
       && echo pass:$e >> results \
