--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: python
 before_script:
-  - "sudo apt-get install avra=1.3.0-1"
-  - "apt-cache madison avra"
+  - "sudo apt-get install -y autoconf automake"
+  - "wget https://downloads.sourceforge.net/project/avra/1.3.0/avra-1.3.0.tar.bz2 -O - | tar -xj"
+  - "cd avra-1.3.0"
+  - "touch NEWS; touch ChangeLog"
+  - "cd src"
+  - "./bootstrap"
+  - "./configure"
+  - "make install"
+  - "cd .."
+  - "cd .."
+
 script:
   - "    make all \
       && echo pass:$e >> results \
