--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ before_script:
   - "sudo apt-get install -y autoconf automake"
   - "wget https://downloads.sourceforge.net/project/avra/1.3.0/avra-1.3.0.tar.bz2 -O - | tar -xj"
   - "cd avra-1.3.0"
-  - "touch NEWS; touch ChangeLog"
   - "cd src"
+  - "touch NEWS; touch README; touch AUTHORS; touch ChangeLog"
   - "./bootstrap"
   - "./configure"
-  - "make install"
+  - "sudo make install"
   - "cd .."
   - "cd .."
 
