--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,30 @@
 language: python
 before_script:
-  - "sudo apt-get install -y autoconf automake"
-  - "wget https://downloads.sourceforge.net/project/avra/1.3.0/avra-1.3.0.tar.bz2 -O - | tar -xj"
-  - "cd avra-1.3.0"
-  - "cd src"
-  - "touch NEWS; touch README; touch AUTHORS; touch ChangeLog"
-  - "./bootstrap"
-  - "./configure"
-  - "sudo make install"
-  - "cd .."
-  - "cd .."
-
+- sudo apt-get install -y autoconf automake
+- wget https://downloads.sourceforge.net/project/avra/1.3.0/avra-1.3.0.tar.bz2 -O
+  - | tar -xj
+- cd avra-1.3.0
+- cd src
+- touch NEWS; touch README; touch AUTHORS; touch ChangeLog
+- "./bootstrap"
+- "./configure"
+- sudo make install
+- cd ..
+- cd ..
 script:
-  - "    make ALL_TARGETS=afro_nfet.hex binary_zip \
-      && echo pass:$e >> results \
-      || echo fail:$e >> results \
-    "
-  - "cat results"
-  - "cut -d: -f1 results | sort | uniq -c"
-  - "test `grep -c fail results` -eq 0"
-
+- "    make ALL_TARGETS=afro_nfet.hex && echo pass:$e >> results || echo
+  fail:$e >> results "
+- cat results
+- 'cut -d: -f1 results | sort | uniq -c'
+- test `grep -c fail results` -eq 0
 env:
-  - WHATEVER='1.0.5'
+- WHATEVER='1.0.5'
+deploy:
+  provider: releases
+  api_key:
+    secure: QCd0770C4ASwe4DUVEokHEFZxWXY+vXQrMib5lQnduGn5JocCm01GBZgrhqd0fRbjU8zCTLulYFjI5YQZrTf9zieBj8cp2AyznsYEDLdwJUbwppqJIbSszklAmcEmDYhE37nN3YFCj7gbDUtymBxZafbmLIIyObZiFNxV9joEgQ=
+  file: afro_nfet.hex
+  skip_cleanup: true
+  on:
+    repo: BrianAdams/tgy
+    branch: feature-ci-builds
